view:fix signup responsiveness on mobile

--- a/app/assets/stylesheets/devise/shared.scss
+++ b/app/assets/stylesheets/devise/shared.scss
@@ -39,8 +39,6 @@
     align-self: center;
     justify-content: center;
     align-items: center
-    // text-align: center;
-    // width: 100%;
   }
 }
 
@@ -141,9 +139,7 @@
 
 }
 
-@media (max-width: 1440px) {
 
-}
 
 @media (max-width: 1920px) and (orientation: landscape) {
 
@@ -164,15 +160,6 @@
 
 
 @media (max-width: 499px) {
-  .devise-page {
-    height: 100vh;
-    
-    h1 {
-    }
-    label {
-
-    }
-  }
 
 }
 
@@ -190,6 +177,9 @@
       font-size: 12px;
     }
     a{
+      font-size: 12px;
+    }
+    .button-up {
       font-size: 12px;
     }
   }
